# fastapi_cognito

./: README.md  pyproject.toml
fastapi_cognito/: __init__.py  cognito.py
