[tool.poetry]
name = "fastapi-cognito"
version = "0.1.0"
description = ""
authors = ["Bjorn Boschman <bjoern@boschman.de>"]
readme = "README.md"
packages = [{include = "fastapi_cognito"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
coverage = "*"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
